<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticalTest01Var04</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="none"></string>
    <string name="navigate_button">Navigate to secondary activity</string>
    <string name="do1">Do</string>
    <string name="mi">Mi</string>
    <string name="sol">Sol</string>
    <string name="do2">Do\'</string>
    <string name="title_activity_practical_test01_var04_secondary">PracticalTest01Var04SecondaryActivity</string>

</resources>
