<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.pdsd.practicaltest01var04.PracticalTest01Var04MainActivity" >

    <EditText
        android:id="@+id/edit_text_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/none" />
    
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:rowCount="4"
        android:columnCount="4" >
        
        <Button
            android:id="@+id/button_do1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/do1" />
        
        <Button
            android:id="@+id/button_mi"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/mi" />
        
        <Button
            android:id="@+id/button_sol"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/sol" />
        
        <Button
            android:id="@+id/button_do2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="3"
            android:text="@string/do2" />
        
    </GridLayout>
    
    <Button
        android:id="@+id/id_navigate_button"
        android:text="@string/navigate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</LinearLayout>
